# GameBricked

./: .gitignore  Cargo.toml  README.md  Trunk.toml  game-bricked.js  index.html  site.webmanifest  sw.js
assets/website/: site.webmanifest  sw.js
src/: cli.rs  emulator.rs  filesystem.rs  main.rs  utils.rs
src/cpu/: cpu.rs  instruction_info.rs  mod.rs  registers.rs
src/emu/: audio.rs  emulator.rs  ffmpeg.rs  mod.rs  motherboard.rs
src/emu/controls/: joypad.rs
src/emu/memory/: dma.rs  header.rs  mmu.rs  mod.rs
src/emu/processor/: cpu.rs  instruction_info.rs  interrupts.rs  mod.rs  registers.rs  timers.rs
src/emu/rendering/: mod.rs  oam.rs  palette.rs  ppu.rs
src/emu/sound/: apu.rs  mod.rs  noise.rs  square.rs  wave.rs
src/interface/: content.rs  fps.rs  helper.rs  init.rs  input.rs  keys.rs  mod.rs  renderer.rs  rom.rs  title.rs  topbar.rs  ui.rs
src/interface/theme/: catppuccin.rs  mod.rs  themes.rs  ui_theme.rs
src/interface/views/: debug.rs  header.rs  mod.rs  tile.rs  view.rs
src/memory/: header.rs  mmu.rs  mod.rs
src/rendering/: ffmpeg.rs  mod.rs  palette.rs  ppu.rs  renderer.rs
src/shaders/: mod.rs  pipeline.rs  wrapper.rs
src/shaders/wgsl/: CRT.c.wgsl  LED.c.wgsl  MonoLCD.c.wgsl  Sample.wgsl  Scale2x.c.wgsl
